Fix broken layout public teacher list

--- a/client/src/containers/Teachers/TeacherList/TeacherList.scss
+++ b/client/src/containers/Teachers/TeacherList/TeacherList.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/global_style";
+
 .search-teacher-container {
   .search-teacher-container__form {
     .search-teacher-container__keyword {
@@ -7,175 +9,11 @@
 }
 
 .teacher-list-container {
-  .teacher-list {
-    width: 100%;
+  .public-teacher-list {
+    background: $white-background;
     &_not-found {
       margin: 100px 0;
     }
   }
-
-  .teacher-item {
-
-    .teacher-item__info {
-      display: block;
-      box-shadow: 0 0 1px 1px rgba(20,23,28,.1), 0 3px 1px 0 rgba(20,23,28,.1);
-
-      .item-img-wrap {
-        position: relative;
-        text-align: center;
-        overflow: hidden;
-
-        img {
-          -moz-transition: all 200ms linear;
-          -o-transition: all 200ms linear;
-          -webkit-transition: all 200ms linear;
-          transition: all 200ms linear;
-          width: 100%;
-          height: auto;
-        }
-
-        .item-img-overlay {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-
-          span {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.7) no-repeat center center;
-            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-            filter: alpha(opacity=0);
-            opacity: 0;
-            -moz-transition: opacity 250ms linear;
-            -o-transition: opacity 250ms linear;
-            -webkit-transition: opacity 250ms linear;
-            transition: opacity 250ms linear;
-          }
-        }
-      }
-
-      .teacher-item__contact {
-        padding: 15px 0 15px 15px;
-        .person-name {
-          font-weight: 700;
-          font-style: normal;
-          font-size: 20px;
-          color: #534051;
-        }
-
-        .person-filed {
-          color: #534051;
-          font-size: 16px;
-          font-weight: 400;
-          font-style: normal;
-        }
-
-        .person-email {
-          color: #A9AFB6;
-          font-size: 14px;
-          font-weight: 400;
-          font-style: normal;
-        }
-      }
-
-      &:hover {
-        .item-img-overlay {
-          span {
-            opacity: 1;
-          }
-        }
-
-        img {
-          -moz-transform: scale(1.1);
-          -o-transform: scale(1.1);
-          -ms-transform: scale(1.1);
-          -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-        }
-      }
-    }
-  }
 }
 
-.teacher-item-grid {
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #E5E5E5;
-  position: relative;
-
-  .user-action {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    border: 1px solid #E5E5E5;
-
-    li {
-      a {
-        background-color: #F7F7F7;
-        font-size: 10px;
-        display: block;
-        border-bottom: 1px solid #E5E5E5;
-        color: #A3A3A3;
-        padding: 3px 3px 3px 5px;
-
-        &:hover {
-          color: #FFF;
-          background: #0D7CC9;
-          border-bottom: 1px solid #0D7CC9;
-        }
-      }
-    }
-  }
-
-  .teacher-wrap-content {
-    display: block;
-    margin: 25px 25px 20px;
-    color: #636363;
-    .content {
-    }
-
-    h3 {
-      font-size: 23px;
-      line-height: 28px;
-      margin: 0 0 5px;
-      color: #0D7CC9;
-      font-weight: 300;
-    }
-
-    .labeling {
-      font-size: 14px;
-      letter-spacing: 1.5px;
-      margin: 0 0 5px;
-    }
-  }
-
-  .image {
-    width: 120px;
-    margin: 0 0 20px;
-    -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
-    -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
-    border-radius: 50%;
-    padding: 2px;
-
-    img {
-      border-radius: 50%;
-      width: 100%;
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-  }
-
-  &:hover {
-    -webkit-box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.29);
-    -moz-box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.29);
-    box-shadow: 0 0 12px -1px rgba(0, 0, 0, 0.29);
-  }
-}
